# snp-analyzer-web

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
prisma/: schema.prisma
snp-bioinfo-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
snp-bioinfo-service/app/: __init__.py  config.py  db_client.py  http_client.py  main.py  worker.py
snp-bioinfo-service/app/services/: __init__.py  annotator.py  blast_service.py  variant_detector.py
snp-bioinfo-service/tests/: __init__.py  test_annotator.py  test_blast_service.py  test_http_client.py  test_variant_detector.py
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/auth/error/: page.tsx
src/app/auth/signin/: page.tsx
src/app/dashboard/: page.tsx
src/app/dashboard/analysis/[id]/: page.tsx
src/app/dashboard/history/: page.tsx
src/app/dashboard/new/: page.tsx
src/app/dashboard/stats/: page.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/components/: analysis-status.tsx  export-panel.tsx  index.ts  sequence-input.tsx  variant-detail.tsx  variant-table.tsx
src/components/icons/: index.tsx
src/components/ui/: sidebar.tsx
src/lib/: constants.ts  redis.ts
src/server/api/: root.ts  trpc.ts
src/server/api/routers/: analysis.ts  variant.ts
src/server/auth/: config.ts  index.ts
src/styles/: globals.css
src/trpc/: react.tsx
